# file-rename-plus

./: Cargo.toml  README.md  build_release_windows.bat
src/: main.rs  settings.rs  theme.rs  types.rs
src/app/: mod.rs
src/file_ops/: mod.rs
src/rename/: mod.rs
src/security/: mod.rs
