[package]
name = "file-rename-plus"
version = "0.1.0"
edition = "2021"
description = "Fast and practical file renaming tool with native GUI"
license = "MIT"
authors = ["Leonard Walujan"]
repository = "https://github.com/walujanle/file-rename-plus"

[dependencies]
# GUI Framework
iced = { version = "0.13", default-features = false, features = ["tiny-skia", "tokio"] }

# Native file dialogs
rfd = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex
regex = "1.11"

# Async runtime
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

# SQLite for settings persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# Cross-platform directories
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Security", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
